--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Suprateekchatterjee.GitHub.io</h1>
+        <h1>S Chatterjee</h1>
         <p>suprateekchatterjee.github.io</p>
 
 
