--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       </header>
       <section>
         <p>Hello world !</p>
-
-      # !!! DO NOT EVER USE HARD-CODED VALUES IN A REAL APP !!!
-# Instead, set and test environment variables, like below
-        
+<!-- Comment         
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
@@ -46,3 +43,4 @@
     
   </body>
 </html>
+-->
