--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>S Chatterjee</h1>
+        <h1>Hello World</h1>
         <p>suprateekchatterjee.github.io</p>
 
 
         <p class="view"><a href="https://github.com/suprateekchatterjee">View My GitHub Profile</a></p>
 
       </header>
-      <section>
-        <p>Hello world !</p>
-<!-- Comment         
+<!-- Comment       
+      <section>       
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
