--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Hello World</h1>
-        <p>suprateekchatterjee.github.io</p>
+        <h1>Hello World !</h1>
 
 
         <p class="view"><a href="https://github.com/suprateekchatterjee">View My GitHub Profile</a></p>
