--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="cv.html">CV</a></div>
+<div class="menu-item"><a href="cv.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
