--- a/publications.html
+++ b/publications.html
@@ -85,27 +85,21 @@ MathJax.Hub.Config({
 <ul>
 
 <li>
-<p><b>The Infectious Disease Network</b>,<br />
-S. Chatterjee and B. S. Sanjeev,<br />
-Scientific Reports (<b>Sci. Rep.</b>), 2019,<br />
-arXiv : 1906. [q-bio.MN], 2019.<br />
-[<a href= "http://arxiv.org/abs/" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www.icts.res.in/event/page/17465" >pdf-slides</a>]
-</li>
-
-<li>
 <p><b>Prediction of Conformational Epitopes using Contact Map Based Approaches</b>,<br />
 S. Chatterjee and B. S. Sanjeev,<br />
-Journal of Bioinformatics & Computational Biology (<b>JBCB</b>), 2016,<br />
-arXiv : 1506.02428 [cs.LG], 2016.<br />
-[<a href="papers/rr-torrent.pdf" >pdf</a>]</p>
+In preparation<br /></p>
 </li>
 
 <li>
-<p><b>Identification of vulnerble Human Proteins vulnerable to multiple Organisms and their disease associations</b>,<br />
+<p><b>Modularity and community detection in infectious disease associations</b>,<br />
 S. Chatterjee and B. S. Sanjeev,<br />
-Journal of  (<b>XYZ</b>), W&CP, 28(3):441-449, 2016,<br />
-arXiv : 1609.03337 [q-bio.MN], 2016.<br />
-[<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="papers/rr-torrent.pdf" >pdf-slides</a>] | [BibTeX] </a> </p>
+In preparation</p>
+</li>
+
+<li>
+<p><b>Role of Toll-Like Receptors in the interplay between pathogen and damage associated molecular patterns</b>,<br />
+S. Chatterjee and B. S. Sanjeev,<br />
+Communicated.<br /></p>
 </li>
 
 
