--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ MathJax.Hub.Config({
 <tr>
 <td> <img src="sc.jpg" alt="Suprateek Chatterjee"  width="200px" height="300px" /> </td>
 <td align="left">
-<p>Doctoral Student<br />
+<p>Ph.D. Student<br />
 <a href="https://www.iiita.ac.in/" >Indian Institute of Information Technology, Allahabad</a><br />
 Allahabad, India<br /></p>
 </td>
