--- a/publications.html
+++ b/publications.html
@@ -68,11 +68,8 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="cv.pdf">CV</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="notes.html">Notes</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 <div class="menu-category">Miscellaneous</div>
-<div class="menu-item"><a href="personal.html">Personal</a></div>
-<div class="menu-item"><a href="quick_links.html">Quick Links</a></div>
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 
@@ -138,7 +135,8 @@ arXiv : 1609.03337 [q-bio.MN], 2016.<br />
 </tr>
 </table>
 
-<!-- Google Analytics -->
+<!-- Google Analytics 
+
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -148,7 +146,8 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 ga('create', 'UA-56996692-2', 'auto');
 ga('send', 'pageview');
 </script>
-<!-- End Google Analytics -->
+
+End Google Analytics -->
 
 </body>
 
