--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@ Communicated.<br /></p>
 S. Chatterjee and B. S. Sanjeev,<br />
 In Proceedings of International Conference on Bioinformatics and Systems Biology (<b>BSB</b>), pp. 1-4, March 04-06, 2016. [<a href="http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7548213" >Link</a>]<br />
 arXiv : 1609.03337 [q-bio.MN], 2016.<br />
-[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7552164" >pdf</a>] | [<a href="pdf-slides.pdf" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7552164" >pdf</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 
 </ul>
