--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">S. Chatterjee</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="cv.html">CV</a></div>
+<div class="menu-item"><a href="cv.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 <div class="menu-category">Miscellaneous</div>
