--- a/publications.html
+++ b/publications.html
@@ -75,38 +75,31 @@ MathJax.Hub.Config({
 <h1>Publications</h1>
 </div>
 
-<h2>Preprints</h2>
+<h2>Refereed Journal papers / Preprints</h2>
 <ul>
 
 <li>
-<p><b>Prediction of Conformational Epitopes using Contact Map Based Approaches</b>,<br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network strategies to study Epstein-Barr Virus associated carcinomas and potential etiological mechanisms for oncogenesis </b></a><br />
+<div class="abs">
+<b>Abstract:</b> We constructed a bipartite graph (disease-gene network) to identify genes that were involved in various carcinomas namely gastric cancer (GC), nasopharyngeal cancer (NPC), Hodgkin's lymphoma (HL) as well as Burkitt's lymphoma (BL). There is an increasing evidence that genes responsible to cause a particular disease are not distributed randomly in a complex mesh of molecular network (interactome) but rather in localized groups that have some common functional properties. In this study, we identified the disease module communities to explore their relation to different carcinomas such as GC, NPC, HL and BL. The top 10 genes were identified as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE based on their degree of distribution and further over-representation analysis showed that the ABL1 gene was most critical in 3 out of 9 critical biological processes namely in regulating pathways in cancer (KEGG:05200), TP53 network (WP:WP1742) and Imatinib and chronic myeloid leukemia (WP:WP3640). As a result, it can be inferred that the EBV pathogen is selective in targeting critical pathways to bring about cellular growth arrest / apoptosis to interfere with vital biological processes including the TP53 network of genes that leads to further proliferation of damage to vital cellular activities in many genes.
+</div> 
 S. Chatterjee and B. S. Sanjeev,<br />
-In preparation<br /></p>
-</li>
+Communicated, 2022,<br />
 
+</li>	
+	
 <li>
-<p><b>Modularity and community detection in infectious disease associations</b>,<br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network-based community detection of comorbidities and their association with SARS-CoV-2 virus during COVID-19 pathogenesis </b></a><br />
+<div class="abs">
+<b>Abstract:</b> Recent studies emphasized the necessity to identify key (human) biological processes and pathways targeted by the Coronaviridae family of viruses, especially SARS-CoV-2. COVID-19 caused up to 33-55% death rates in COVID-19 patients with malignant neoplasms and Alzheimer's disease. Given this scenario, we identified biological processes and pathways which are most likely affected by COVID-19. The associations between various diseases and human genes known to interact with viruses from Coronaviridae family were obtained from the IntAct COVID-19 data set annotated with DisGeNET data. We constructed the disease-gene network to identify genes that are involved in various comorbid diseased states. Communities from the disease-gene network through Louvain method were identified and functional enrichment through over-representation analysis methodology was used to discover significant biological processes and pathways shared between COVID-19 and other diseases. The IntAct COVID-19 data set comprised of 828 human genes and 10,473 diseases that together constituted nodes in the disease-gene network. Each of the 70,210 edges connects a human gene with an associated disease. The top 10 genes linked to most number of diseases were VEGFA, BCL2, CTNNB1, ALB, COX2, AGT, HLA-A, HMOX1, FGT2 and COMT. The most vulnerable group of patients thus discovered had comorbid conditions such as carcinomas, malignant neoplasms and Alzheimer's disease. Finally, we identified 37 potentially useful biological processes and pathways for improved therapies.
+</div>
 S. Chatterjee and B. S. Sanjeev,<br />
-In preparation</p>
-</li>
-
-<li>
-<p><b>Role of Toll-Like Receptors in the interplay between pathogen and damage associated molecular patterns</b>,<br />
-S. Chatterjee and B. S. Sanjeev,<br />
-Communicated.<br /></p>
-</li>
-
-
+Under revision (<b>Medicine</b>), 2022,<br />
+arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
+[<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+</li>	
+	
 </ul>
-
-<!--
-
-<h2>Refereed Journal papers</h2>
-<ul>
-
-</ul>
-
--->
 
 <h2>Refereed Conference papers</h2>
 <ul>
