--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@ arXiv : 1609.03337 [q-bio.MN], 2016.<br />
 <ul>
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> A contact-map based approach to predict conformational epitope residues</b></a>,<br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> A Contact Map-Based Approach To Predict Conformational Epitope Residues </b></a>,<br />
 <div class="abs">
 <b>Abstract:</b> We apply contact mapping techniques once we have successfully classified the exposed residues from the buried ones using some cut-off distance $\delta$, which are further grouped into clusters of exposed residues that fall under the threshold cut-off distance in contact map space.
 </div>
