--- a/publications.html
+++ b/publications.html
@@ -127,7 +127,7 @@ arXiv : 1609.03337 [q-bio.MN], 2016.<br />
 <b>Abstract:</b> We apply contact mapping techniques once we have successfully classified the exposed residues from the buried ones using some cut-off distance $\delta$, which are further grouped into clusters of exposed residues that fall under the threshold cut-off distance in contact map space.
 </div>
 S. Chatterjee <br />
-IIIT-Allahabad <br />	
+M.Tech, IIIT-Allahabad <br />	
 [<a href="docs/" >pdf-slides</a>]</a> <br />
 </li>
 
