--- a/publications.html
+++ b/publications.html
@@ -77,6 +77,18 @@ MathJax.Hub.Config({
 
 <h2>Refereed Journal papers / Preprints</h2>
 <ul>
+
+<li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network strategies to study Epstein-Barr Virus associated carcinomas and potential etiological mechanisms for oncogenesis </b></a><br />
+<div class="abs">
+<b>Abstract:</b> Diseased conditions are a consequence of some abnormality that are associated with clinical conditions in numerous cells and tissues affecting various organs. The common role of EBV (Epstein-Barr virus) in causing infectious mononucleosis (IM) affecting B-cells and epithelial cells and the development of EBV-associated cancers has been an area of active research. Investigating such significant interactions may help discover new therapeutic targets for certain EBV-associated lymphoproliferative (Burkitt's Lymphoma and Hodgkin's Lymphoma) and non-lymphoproliferative diseases (Gastric cancer and Nasopharyngeal cancer). Based on the DisGeNET (v7.0) data set, we constructed a disease-gene network bipartite graph to identify genes that are involved in various carcinomas namely, gastric cancer (GC), nasopharyngeal cancer (NPC), Hodgkin's lymphoma (HL) and Burkitt's lymphoma (BL). Using the community detection algorithm (Louvain method), we identified communities followed by functional enrichment using over-representation analysis methodology. In this study, we identified the modular communities to explore the relation of this common causative pathogen (EBV) with different carcinomas such as GC, NPC, HL and BL. We could identify the top 10 genes as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE based on their degree of distribution. Further over-representation analysis showed that the ABL1 gene was significantly over-represented in 3 out of 9 critical biological processes. As a result, we can infer that the EBV pathogen is selective in targeting critical pathways to bring about cellular growth arrest/apoptosis and interfering with vital biological processes, including the TP53 network of genes that leads to further proliferation of damage to vital cellular activities.
+</div> 
+S. Chatterjee and B. S. Sanjeev,<br />
+Communicated, 2022,<br />
+arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
+[<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+</li>	
+	
 	
 <li>
 <a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network-based community detection of comorbidities and their association with SARS-CoV-2 virus during COVID-19 pathogenesis </b></a><br />
@@ -89,17 +101,6 @@ arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
 [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
 </li>	
 
-<li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network strategies to study Epstein-Barr Virus associated carcinomas and potential etiological mechanisms for oncogenesis </b></a><br />
-<div class="abs">
-<b>Abstract:</b> We constructed a bipartite graph (disease-gene network) to identify genes that were involved in various carcinomas namely gastric cancer (GC), nasopharyngeal cancer (NPC), Hodgkin's lymphoma (HL) as well as Burkitt's lymphoma (BL). There is an increasing evidence that genes responsible to cause a particular disease are not distributed randomly in a complex mesh of molecular network (interactome) but rather in localized groups that have some common functional properties. In this study, we identified the disease module communities to explore their relation to different carcinomas such as GC, NPC, HL and BL. The top 10 genes were identified as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE based on their degree of distribution and further over-representation analysis showed that the ABL1 gene was most critical in 3 out of 9 critical biological processes namely in regulating pathways in cancer (KEGG:05200), TP53 network (WP:WP1742) and Imatinib and chronic myeloid leukemia (WP:WP3640). As a result, it can be inferred that the EBV pathogen is selective in targeting critical pathways to bring about cellular growth arrest / apoptosis to interfere with vital biological processes including the TP53 network of genes that leads to further proliferation of damage to vital cellular activities in many genes.
-</div> 
-S. Chatterjee and B. S. Sanjeev,<br />
-Communicated, 2022,<br />
-
-</li>
-	
-	
 </ul>
 
 <h2>Refereed Conference papers</h2>
