--- a/publications.html
+++ b/publications.html
@@ -79,14 +79,14 @@ MathJax.Hub.Config({
 <ul>
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network strategies to study Epstein-Barr Virus associated carcinomas and potential etiological mechanisms for oncogenesis </b></a><br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Community detection in Epstein-Barr virus associated carcinomas and role of tyrosine kinase in etiological mechanisms for oncogenesis </b></a><br />
 <div class="abs">
-<b>Abstract:</b> Diseased conditions are a consequence of some abnormality that are associated with clinical conditions in numerous cells and tissues affecting various organs. The common role of EBV (Epstein-Barr virus) in causing infectious mononucleosis (IM) affecting B-cells and epithelial cells and the development of EBV-associated cancers has been an area of active research. Investigating such significant interactions may help discover new therapeutic targets for certain EBV-associated lymphoproliferative (Burkitt's Lymphoma and Hodgkin's Lymphoma) and non-lymphoproliferative diseases (Gastric cancer and Nasopharyngeal cancer). Based on the DisGeNET (v7.0) data set, we constructed a disease-gene network bipartite graph to identify genes that are involved in various carcinomas namely, gastric cancer (GC), nasopharyngeal cancer (NPC), Hodgkin's lymphoma (HL) and Burkitt's lymphoma (BL). Using the community detection algorithm (Louvain method), we identified communities followed by functional enrichment using over-representation analysis methodology. In this study, we identified the modular communities to explore the relation of this common causative pathogen (EBV) with different carcinomas such as GC, NPC, HL and BL. We could identify the top 10 genes as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE based on their degree of distribution. Further over-representation analysis showed that the ABL1 gene was significantly over-represented in 3 out of 9 critical biological processes. As a result, we can infer that the EBV pathogen is selective in targeting critical pathways to bring about cellular growth arrest/apoptosis and interfering with vital biological processes, including the TP53 network of genes that leads to further proliferation of damage to vital cellular activities.
+<b>Abstract:</b> Epstein-Barr virus (EBV) affects more than 90% of global population. The role of the virus in causing infectious mononucleosis (IM) affecting B-cells and epithelial cells and in the development of EBV associated cancers is well documented. Investigating the associated interactions can pave way for the discovery of novel therapeutic targets for EBV associated lymphoproliferative (Burkitt's Lymphoma and Hodgkin's Lymphoma) and non-lymphoproliferative diseases (Gastric cancer and Nasopharyngeal cancer). We identified the modular communities to explore the relation of this common causative pathogen (EBV) with different carcinomas such as GC, NPC, HL and BL. Through network analysis we identified the top 10 genes linked with EBV associated carcinomas as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE. Further, the tyrosine-protein kinase (ABL1) gene was significantly over-represented in 3 out of 9 critical biological processes, viz. in regulatory pathways in cancer, the TP53 network and the Imatinib and chronic myeloid leukemia biological processes. Consequently, the EBV pathogen appears to target critical pathways involved in cellular growth arrest/apoptosis. We make our case for BCR-ABL1 tyrosine-kinase inhibitors (TKI) for further clinical investigations in the inhibition of BCR-mediated EBV activation in carcinomas for better prognostic and therapeutic outcomes.
 </div> 
 S. Chatterjee and B. S. Sanjeev,<br />
 <b>Microbial Pathogenesis</b>, May 2023, <br />
 arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
-[<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
 </li>	
 	
 	
@@ -98,7 +98,7 @@ arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
 S. Chatterjee and B. S. Sanjeev,<br />
 <b>Virology</b> 2023, Under revision, <br />
 arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
-[<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+[<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
 </li>	
 
 </ul>
@@ -112,9 +112,9 @@ arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
 <b>Abstract:</b> While most studies emphasize on certain aspects of Pathogen-Host Interactions (PHI), such as the preferential attachment of bacteria or virus to its human receptor homolog, studies have attempted to methodically classify interactions among pathogenic proteins and their host proteins. Here we have analyzed 182 pathogens from The Pathogen-Host Interaction Search Tool (PHISTO) and could identify the proteins/protein coding genes that act on both virus and bacteria. Importantly there were few proteins viz. P53 (Tumor protein p53), NF$\kappa$B1 (Nuclear factor of kappa light polypeptide gene enhancer in B-cells 1), GBLP (Guanine nucleotide-binding protein subunit beta-2-like-1), TOX4 (TOX high mobility group box family member 4), PDIA1 (Protein disulfide-isomerase precursor), MHY9 (Myosin 9), RAC1 (Ras-related C3 botulinum toxin substrate 1), CCAR2 (Cell cycle and apoptosis regulator protein 2) and ILF3 (Interleukin enhancer binding factor 3) that were more susceptible to both bacterial and viral pathogens. Identification of such important interacting proteins (IIPs) can elicit significant insights for better understanding the molecular mechanisms of such pathogens that interact with the human host.
 </div>
 S. Chatterjee and B. S. Sanjeev,<br />
-In Proceedings of International Conference on Bioinformatics and Systems Biology (<b>BSB</b>), pp. 1-4, March 04-06, 2016. [<a href="http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=7548213" >Link</a>]<br />
+In Proceedings of International Conference on Bioinformatics and Systems Biology (<b>BSB</b>), pp. 1-4, March 04-06, 2016. <br />
 arXiv : 1609.03337 [q-bio.MN], 2016.<br />
-[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=7552164" >pdf</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 
 </ul>
