--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 S. Chatterjee and B. S. Sanjeev,<br />
 <b>Microbial Pathogenesis</b>, May 2023, <br />
 arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 	
 	
@@ -98,7 +98,7 @@ arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
 S. Chatterjee and B. S. Sanjeev,<br />
 <b>Virology</b> 2023, Under revision, <br />
 arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
-[<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="http://" >pdf</a>] | [<a href="https://www." >pdf-slides</a>]
+[<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 
 </ul>
