--- a/publications.html
+++ b/publications.html
@@ -84,8 +84,8 @@ MathJax.Hub.Config({
 <b>Abstract:</b> Epstein-Barr virus (EBV) affects more than 90% of global population. The role of the virus in causing infectious mononucleosis (IM) affecting B-cells and epithelial cells and in the development of EBV associated cancers is well documented. Investigating the associated interactions can pave way for the discovery of novel therapeutic targets for EBV associated lymphoproliferative (Burkitt's Lymphoma and Hodgkin's Lymphoma) and non-lymphoproliferative diseases (Gastric cancer and Nasopharyngeal cancer). We identified the modular communities to explore the relation of this common causative pathogen (EBV) with different carcinomas such as GC, NPC, HL and BL. Through network analysis we identified the top 10 genes linked with EBV associated carcinomas as CASP10, BRAF, NFKBIA, IFNA2, GSTP1, CSF3, GATA3, UBR5, AXIN2 and POLE. Further, the tyrosine-protein kinase (ABL1) gene was significantly over-represented in 3 out of 9 critical biological processes, viz. in regulatory pathways in cancer, the TP53 network and the Imatinib and chronic myeloid leukemia biological processes. Consequently, the EBV pathogen appears to target critical pathways involved in cellular growth arrest/apoptosis. We make our case for BCR-ABL1 tyrosine-kinase inhibitors (TKI) for further clinical investigations in the inhibition of BCR-mediated EBV activation in carcinomas for better prognostic and therapeutic outcomes.
 </div> 
 S. Chatterjee and B. S. Sanjeev,<br />
-<b>Microbial Pathogenesis</b>, <b>180</b>(106115), pp. 1-7, July 2023, <br />
-arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
+<b>Microbial Pathogenesis</b>, <b>180</b>(106115), pp. 1-7, July 2023<br />
+arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022<br />
 [<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 	
@@ -96,8 +96,8 @@ arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022.<br />
 <b>Abstract:</b> Recent studies emphasized the necessity to identify key (human) biological processes and pathways targeted by the Coronaviridae family of viruses, especially SARS-CoV-2. COVID-19 caused up to 33-55% death rates in COVID-19 patients with malignant neoplasms and Alzheimer's disease. Given this scenario, we identified biological processes and pathways which are most likely affected by COVID-19. The associations between various diseases and human genes known to interact with viruses from Coronaviridae family were obtained from the IntAct COVID-19 data set annotated with DisGeNET data. We constructed the disease-gene network to identify genes that are involved in various comorbid diseased states. Communities from the disease-gene network through Louvain method were identified and functional enrichment through over-representation analysis methodology was used to discover significant biological processes and pathways shared between COVID-19 and other diseases. The IntAct COVID-19 data set comprised of 828 human genes and 10,473 diseases that together constituted nodes in the disease-gene network. Each of the 70,210 edges connects a human gene with an associated disease. The top 10 genes linked to most number of diseases were VEGFA, BCL2, CTNNB1, ALB, COX2, AGT, HLA-A, HMOX1, FGT2 and COMT. The most vulnerable group of patients thus discovered had comorbid conditions such as carcinomas, malignant neoplasms and Alzheimer's disease. Finally, we identified 37 potentially useful biological processes and pathways for improved therapies.
 </div>
 S. Chatterjee and B. S. Sanjeev,<br />
-<b>Virology</b> 2023, Under revision, <br />
-arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
+<b>Virology</b> 2023, Under revision <br />
+arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022<br />
 [<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 
@@ -112,8 +112,8 @@ arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022.<br />
 <b>Abstract:</b> While most studies emphasize on certain aspects of Pathogen-Host Interactions (PHI), such as the preferential attachment of bacteria or virus to its human receptor homolog, studies have attempted to methodically classify interactions among pathogenic proteins and their host proteins. Here we have analyzed 182 pathogens from The Pathogen-Host Interaction Search Tool (PHISTO) and could identify the proteins/protein coding genes that act on both virus and bacteria. Importantly there were few proteins viz. P53 (Tumor protein p53), NF$\kappa$B1 (Nuclear factor of kappa light polypeptide gene enhancer in B-cells 1), GBLP (Guanine nucleotide-binding protein subunit beta-2-like-1), TOX4 (TOX high mobility group box family member 4), PDIA1 (Protein disulfide-isomerase precursor), MHY9 (Myosin 9), RAC1 (Ras-related C3 botulinum toxin substrate 1), CCAR2 (Cell cycle and apoptosis regulator protein 2) and ILF3 (Interleukin enhancer binding factor 3) that were more susceptible to both bacterial and viral pathogens. Identification of such important interacting proteins (IIPs) can elicit significant insights for better understanding the molecular mechanisms of such pathogens that interact with the human host.
 </div>
 S. Chatterjee and B. S. Sanjeev,<br />
-In Proceedings of International Conference on Bioinformatics and Systems Biology (<b>BSB</b>), pp. 1-4, March 04-06, 2016. <br />
-arXiv : 1609.03337 [q-bio.MN], 2016.<br />
+In Proceedings of International Conference on Bioinformatics and Systems Biology (<b>BSB</b>), pp. 1-4, March 04-06, 2016<br />
+arXiv : 1609.03337 [q-bio.MN], 2016<br />
 [<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 
@@ -127,8 +127,8 @@ arXiv : 1609.03337 [q-bio.MN], 2016.<br />
 <div class="abs">
 <b>Abstract:</b> We apply contact mapping techniques once we have successfully classified the exposed residues from the buried ones using some cut-off distance $\delta$, which are further grouped into clusters of exposed residues that fall under the threshold cut-off distance in contact map space.
 </div>
-S. Chatterjee <br />
-M.Tech, IIIT-Allahabad <br />	
+S. Chatterjee<br />
+M.Tech, IIIT-Allahabad<br />	
 [<a href="docs/" >pdf-slides</a>]</a> <br />
 </li>
 
