--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@ MathJax.Hub.Config({
 </div> 
 S. Chatterjee and B. S. Sanjeev,<br />
 <i>Microbial Pathogenesis</i>, <b>180</b> (106115), pp. 1-7, July 2023<br />
-arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022<br />
+arXiv : 2208.00471 <br />
 [<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 	
@@ -97,7 +97,7 @@ arXiv : 2208.00471 [q-bio.MN], [q-bio.SC] 2022<br />
 </div>
 S. Chatterjee and B. S. Sanjeev,<br />
 <b>Virology</b> 2023, Under revision <br />
-arXiv : 2205.15968 [q-bio.MN], [q-bio.SC] 2022<br />
+arXiv : 2205.15968 <br />
 [<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>	
 
