--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,7 @@ arXiv: 2208.00471 <br />
 <ul>
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Identification of Human Proteins vulnerble to multiple Organisms </b></a><br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Identification of Human Proteins vulnerable to multiple Organisms </b></a><br />
 <div class="abs">
 <b>Abstract:</b> While most studies emphasize on certain aspects of Pathogen-Host Interactions (PHI), such as the preferential attachment of bacteria or virus to its human receptor homolog, studies have attempted to methodically classify interactions among pathogenic proteins and their host proteins. Here we have analyzed 182 pathogens from The Pathogen-Host Interaction Search Tool (PHISTO) and could identify the proteins/protein coding genes that act on both virus and bacteria. Importantly there were few proteins viz. P53 (Tumor protein p53), NF$\kappa$B1 (Nuclear factor of kappa light polypeptide gene enhancer in B-cells 1), GBLP (Guanine nucleotide-binding protein subunit beta-2-like-1), TOX4 (TOX high mobility group box family member 4), PDIA1 (Protein disulfide-isomerase precursor), MHY9 (Myosin 9), RAC1 (Ras-related C3 botulinum toxin substrate 1), CCAR2 (Cell cycle and apoptosis regulator protein 2) and ILF3 (Interleukin enhancer binding factor 3) that were more susceptible to both bacterial and viral pathogens. Identification of such important interacting proteins (IIPs) can elicit significant insights for better understanding the molecular mechanisms of such pathogens that interact with the human host.
 </div>
