--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,17 @@ MathJax.Hub.Config({
 <ul>
 
 <li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Identification of Human Proteins vulnerable to multiple Organisms </b></a><br />
+<div class="abs">
+<b>Abstract:</b> While most studies emphasize on certain aspects of Pathogen-Host Interactions (PHI), such as the preferential attachment of bacteria or virus to its human receptor homolog, studies have attempted to methodically classify interactions among pathogenic proteins and their host proteins. Here we have analyzed 182 pathogens from The Pathogen-Host Interaction Search Tool (PHISTO) and could identify the proteins/protein coding genes that act on both virus and bacteria. Importantly there were few proteins viz. P53 (Tumor protein p53), NF$\kappa$B1 (Nuclear factor of kappa light polypeptide gene enhancer in B-cells 1), GBLP (Guanine nucleotide-binding protein subunit beta-2-like-1), TOX4 (TOX high mobility group box family member 4), PDIA1 (Protein disulfide-isomerase precursor), MHY9 (Myosin 9), RAC1 (Ras-related C3 botulinum toxin substrate 1), CCAR2 (Cell cycle and apoptosis regulator protein 2) and ILF3 (Interleukin enhancer binding factor 3) that were more susceptible to both bacterial and viral pathogens. Identification of such important interacting proteins (IIPs) can elicit significant insights for better understanding the molecular mechanisms of such pathogens that interact with the human host.
+</div>
+S. Chatterjee and B. S. Sanjeev, <br />
+<i>In Proceedings of International Conference on Bioinformatics and Systems Biology</i> <b>(BSB)</b>, IEEE pp. 1-4, 04-06 March 2016. <br />
+arXiv: 1609.03337 <br />
+[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+</li>
+	
+<li>
 <a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network-based community detection of comorbidities and their association with SARS-CoV-2 virus during COVID-19 pathogenesis </b></a><br />
 <div class="abs">
 <b>Abstract:</b> Recent studies emphasized the necessity to identify key (human) biological processes and pathways targeted by the Coronaviridae family of viruses, especially SARS-CoV-2. COVID-19 caused up to 33-55% death rates in COVID-19 patients with malignant neoplasms and Alzheimer's disease. Given this scenario, we identified biological processes and pathways which are most likely affected by COVID-19. The associations between various diseases and human genes known to interact with viruses from Coronaviridae family were obtained from the IntAct COVID-19 data set annotated with DisGeNET data. We constructed the disease-gene network to identify genes that are involved in various comorbid diseased states. Communities from the disease-gene network through Louvain method were identified and functional enrichment through over-representation analysis methodology was used to discover significant biological processes and pathways shared between COVID-19 and other diseases. The IntAct COVID-19 data set comprised of 828 human genes and 10,473 diseases that together constituted nodes in the disease-gene network. Each of the 70,210 edges connects a human gene with an associated disease. The top 10 genes linked to most number of diseases were VEGFA, BCL2, CTNNB1, ALB, COX2, AGT, HLA-A, HMOX1, FGT2 and COMT. The most vulnerable group of patients thus discovered had comorbid conditions such as carcinomas, malignant neoplasms and Alzheimer's disease. Finally, we identified 37 potentially useful biological processes and pathways for improved therapies.
@@ -102,24 +113,9 @@ arXiv: 2208.00471 <br />
 	
 </ul>
 
-<h2>Refereed Conference papers</h2>
-<ul>
-
-<li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Identification of Human Proteins vulnerable to multiple Organisms </b></a><br />
-<div class="abs">
-<b>Abstract:</b> While most studies emphasize on certain aspects of Pathogen-Host Interactions (PHI), such as the preferential attachment of bacteria or virus to its human receptor homolog, studies have attempted to methodically classify interactions among pathogenic proteins and their host proteins. Here we have analyzed 182 pathogens from The Pathogen-Host Interaction Search Tool (PHISTO) and could identify the proteins/protein coding genes that act on both virus and bacteria. Importantly there were few proteins viz. P53 (Tumor protein p53), NF$\kappa$B1 (Nuclear factor of kappa light polypeptide gene enhancer in B-cells 1), GBLP (Guanine nucleotide-binding protein subunit beta-2-like-1), TOX4 (TOX high mobility group box family member 4), PDIA1 (Protein disulfide-isomerase precursor), MHY9 (Myosin 9), RAC1 (Ras-related C3 botulinum toxin substrate 1), CCAR2 (Cell cycle and apoptosis regulator protein 2) and ILF3 (Interleukin enhancer binding factor 3) that were more susceptible to both bacterial and viral pathogens. Identification of such important interacting proteins (IIPs) can elicit significant insights for better understanding the molecular mechanisms of such pathogens that interact with the human host.
-</div>
-S. Chatterjee and B. S. Sanjeev, <br />
-<i>In Proceedings of International Conference on Bioinformatics and Systems Biology</i> <b>(BSB)</b>, IEEE pp. 1-4, 04-06 March 2016. <br />
-arXiv: 1609.03337 <br />
-[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
-</li>
-
-</ul>
-
 <h2>Thesis</h2>
 <ul>
+
 
 <li>
 <a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> A Contact Map-Based Approach To Predict Conformational Epitope Residues </b></a><br />
@@ -131,6 +127,16 @@ M.Tech, IIIT-Allahabad <br />
 [<a href="docs/" >pdf-slides</a>]</a> <br />
 </li>
 
+<li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Community Detection in Disease Gene Networks </b></a><br />
+<div class="abs">
+<b>Abstract:</b>
+</div>
+S. Chatterjee <br />
+Ph.D., IIIT-Allahabad <br />	
+[<a href="docs/" >pdf-slides</a>]</a> <br />
+</li>
+	
 </ul>	
 	
 <div id="footer">
