--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@ MathJax.Hub.Config({
 </div>
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>In Proceedings of International Conference on Bioinformatics and Systems Biology</i> <b>(BSB)</b>, IEEE pp. 1-4, 04-06 March 2016. <br />
-arXiv: 1609.03337 <br />
+doi: 10.1109/BSB.2016.7552164 <br />
 [<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 	
@@ -96,7 +96,7 @@ arXiv: 1609.03337 <br />
 </div> 
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, <b>180</b> (106115), pp. 1-7, July 2023. <br />
-arXiv: 2208.00471 <br />
+doi: 10.1016/j.micpath.2023.106115 <br />
 [<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>		
 
