--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>In Proceedings of International Conference on Bioinformatics and Systems Biology</i> <b>(BSB)</b>, IEEE pp. 1-4, 04-06 March 2016. <br />
 doi: 10.1109/BSB.2016.7552164 <br />
-[<a href="https://doi.org/10.1109/BSB.2016.7552164" >DOI</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="https://doi.org/10.1109/BSB.2016.7552164" >doi</a>] | [<a href= "http://arxiv.org/abs/1609.03337" >arXiv</a>] | [<a href="docs/" >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 	
 <li>
@@ -97,7 +97,7 @@ doi: 10.1109/BSB.2016.7552164 <br />
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, <b>180</b> (106115), pp. 1-7, July 2023. <br />
 doi: 10.1016/j.micpath.2023.106115 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >DOI</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>		
 
 <li>
@@ -108,7 +108,7 @@ doi: 10.1016/j.micpath.2023.106115 <br />
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Virology</i>, Under revision, 2023. <br />
 arXiv: 2205.15968 <br />
-[<a href="" >DOI</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
 	
 </ul>
