--- a/publications.html
+++ b/publications.html
@@ -97,19 +97,31 @@ doi: 10.1109/BSB.2016.7552164 <br />
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, <b>180</b> (106115), pp. 1-7, July 2023. <br />
 doi: 10.1016/j.micpath.2023.106115 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P2.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>		
 
 <li>
-<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Network-based community detection of comorbidities and their association with SARS-CoV-2 virus during COVID-19 pathogenesis </b></a><br />
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Over-representation analysis of angiogenic factors in immunosuppressive mechanisms in neoplasms and neurological conditions during COVID-19 </b></a><br />
 <div class="abs">
 <b>Abstract:</b> Recent studies emphasized the necessity to identify key (human) biological processes and pathways targeted by the Coronaviridae family of viruses, especially SARS-CoV-2. COVID-19 caused up to 33-55% death rates in COVID-19 patients with malignant neoplasms and Alzheimer's disease. Given this scenario, we identified biological processes and pathways which are most likely affected by COVID-19. The associations between various diseases and human genes known to interact with viruses from Coronaviridae family were obtained from the IntAct COVID-19 data set annotated with DisGeNET data. We constructed the disease-gene network to identify genes that are involved in various comorbid diseased states. Communities from the disease-gene network through Louvain method were identified and functional enrichment through over-representation analysis methodology was used to discover significant biological processes and pathways shared between COVID-19 and other diseases. The IntAct COVID-19 data set comprised of 828 human genes and 10,473 diseases that together constituted nodes in the disease-gene network. Each of the 70,210 edges connects a human gene with an associated disease. The top 10 genes linked to most number of diseases were VEGFA, BCL2, CTNNB1, ALB, COX2, AGT, HLA-A, HMOX1, FGT2 and COMT. The most vulnerable group of patients thus discovered had comorbid conditions such as carcinomas, malignant neoplasms and Alzheimer's disease. Finally, we identified 37 potentially useful biological processes and pathways for improved therapies.
 </div>
 S. Chatterjee and B. S. Sanjeev, <br />
 <i></i>, Under revision, 2023. <br />
 arXiv: 2205.15968 <br />
-[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P1.pdf" >poster</a>] | [BibTeX] </a> <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P3.pdf" >poster</a>] | [BibTeX] </a> <br />
 </li>
+
+<li>
+<a href="javascript:void(0)" onclick="showAbstract(this)" class="title"> <b> Role of Tole-like Receptors in the interplay between pathogen and damage associated molecular patterns </b></a><br />
+<div class="abs">
+<b>Abstract:</b> Various theoretical studies have been carried out to infer relevant protein-protein interactions among pathogens and their hosts. Such studies are generally based on preferential attachment of bacteria / virus to their human receptor homologs. We have analyzed 17 pathogenic species mainly belonging to bacterial and viral pathogenic classes, with the aim to identify the interacting human proteins which are targeted by both bacteria and virus specifically. Our study reveals that the TLRs play a crucial role between the pathogen-associated molecular patterns (PAMPs) and the damage associated molecular patterns (DAMPS). PAMPs include bacterial lipopolysaccharides (LPs), endotoxins, bacterial flagellin, lipoteichoic acid, peptidoglycan in bacterial organisms and nucleic acid variants associated with viral organisms, whereas DAMPs are associated with host biomolecules that perpetuate non-infectious inflammatory responses. We found out the presence of SOD1 and SOD2 (superoxide dismutase) is crucial, as it acts as an anti-oxidant and helps in eliminating oxidative stress by preventing damage from reactive oxygen species. Hence, such strategies can be used as new therapies for anti-inflammatory diseases with significant clinical outcomes
+</div>
+S. Chatterjee and B. S. Sanjeev, <br />
+<i></i>, In preparation. <br />
+arXiv: 1907.03512 <br />
+[<a href="" >doi</a>] | [<a href= "http://arxiv.org/abs/1907.03512" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P4.pdf" >poster</a>] | [BibTeX] </a> <br />
+</li>
+
 	
 </ul>
 
