--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Allahabad, India<br /></p>
 
 <div class="infoblock">
 <div class="blockcontent">
-<p><pre>&ldquo;Amazingly simple and far-reaching natural laws govern the structure and evolution of all the complex networks that surround us.&rdquo;<br /></tt></p>
+<p><pre>&ldquo;The most complex questions have the most simplest answers as amazingly simple and far-reaching natural laws govern the structure and evolution of all the complex networks that surround us.&rdquo;<br /></tt></p>
 &#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Anonymous</pre></p>
 </div>
 </div>
