--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ Allahabad, India<br /></p>
 
 <h2>Research Interests</h2>
 <ul>
-<li><p>Molecular Networks</p></li>
-<li><p>Network Biology</p></li>
+<li><p>Complex Network</p></li>
 <li><p>Network Medicine</p></li>
+<li><p>Network Science</p></li>
 </ul>
 
 <div id="footer">
