--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Allahabad, India<br /></p>
 <div class="infoblock">
 <div class="blockcontent">
 <p><pre>&ldquo;The most complex questions have the most simplest answers as amazingly simple and far-reaching natural laws govern the structure of complex networks that surround us.&rdquo;<br /></tt></p>
-&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Anonymous</pre></p>
+&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&#x09;&dash;Anonymous</pre></p>
 </div>
 </div>
 
