--- a/publications.html
+++ b/publications.html
@@ -86,7 +86,7 @@ MathJax.Hub.Config({
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, <b>185</b> (106386), pp. 1-9, Dec 2023. <br />
 doi: 10.1016/j.micpath.2023.106386 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106386" >doi</a>] | [<a href= "http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P3.pdf" >poster</a>] | [BibTeX] [a href= "https://pubmed.ncbi.nlm.nih.gov/37865274/" >pubmed</a>] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106386" >doi</a>] | [<a href="http://arxiv.org/abs/2205.15968" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P3.pdf" >poster</a>] | [BibTeX] [<a href="https://pubmed.ncbi.nlm.nih.gov/37865274/" >pubmed</a>] </a> <br />
 </li>
 	
 <li>
@@ -97,7 +97,7 @@ doi: 10.1016/j.micpath.2023.106386 <br />
 S. Chatterjee and B. S. Sanjeev, <br />
 <i>Microbial Pathogenesis</i>, <b>180</b> (106115), pp. 1-7, July 2023. <br />
 doi: 10.1016/j.micpath.2023.106115 <br />
-[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href= "http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P2.pdf" >poster</a>] | [BibTeX] [a href= "https://pubmed.ncbi.nlm.nih.gov/37137346/" >pubmed</a>] </a> <br />
+[<a href="https://doi.org/10.1016/j.micpath.2023.106115" >doi</a>] | [<a href="http://arxiv.org/abs/2208.00471" >arXiv</a>] | [<a href="https://www." >pdf-slides</a>] | [<a href="docs/P2.pdf" >poster</a>] | [BibTeX] [<a href="https://pubmed.ncbi.nlm.nih.gov/37137346/" >pubmed</a>] </a> <br />
 </li>		
 
 <li>
